--- a/prescouterapp/WebContent/css/style.css
+++ b/prescouterapp/WebContent/css/style.css
@@ -14,6 +14,18 @@ body {
 	border: 2px solid #e9e9e9;
 }
 
+.error-div {
+	background-color: #ffffff;
+	padding: 10px 0;
+	border: 2px solid #e9e9e9;
+	color: #ff3333;
+}
+
 .my-tab {
 	border: 5px solid #e9e9e9;
 }
+
+.errorMessage {
+	color: #ff3333;
+}
+
