--- a/prescouterapp/WebContent/css/style.css
+++ b/prescouterapp/WebContent/css/style.css
@@ -9,6 +9,7 @@
 
 body {
 	background-color: #f5f5f5;
+	color: #727272;
 }
 
 .search-area {
@@ -28,7 +29,18 @@ body {
 	border: 5px solid #e9e9e9;
 }
 
+.my-tab td {
+   text-align: center;   
+}
+
 .errorMessage {
 	color: #ff3333;
 }
 
+.font-color-blue {
+	color: #2196F3;
+}
+
+.font-color-green {
+	color: #8BC34A;
+}
